force-app/main/default/objects/Existing_insurance__c/Existing_insurance__c.object-meta.xml
<CustomObject>
    <label>Existing Insurance</label>
    <nameField>
        <displayFormat>EXP- {00000000}</displayFormat>
        <label>Existing Insurance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Existing insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>