force-app/main/default/objects/Existing_insurance__c/fields/Any_existing_policies__c.field-meta.xml
<CustomField>
    <fullName>Any_existing_policies__c</fullName>
    <label>Any existing policies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>