force-app/main/default/objects/Existing_insurance__c/fields/Life_policy_type__c.field-meta.xml
<CustomField>
    <fullName>Life_policy_type__c</fullName>
    <label>Life policy type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>