force-app/main/default/objects/Existing_insurance__c/fields/What_policy_is_this__c.field-meta.xml
<CustomField>
    <fullName>What_policy_is_this__c</fullName>
    <label>What policy is this?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life insurance</fullName>
            </value>
            <value>
                <fullName>Income protection</fullName>
            </value>
            <value>
                <fullName>Buildings &amp; Contents</fullName>
            </value>
            <value>
                <fullName>Cancelled protection.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>